# cmake-coding

./: .gitignore  README.md
01-basic/: CMakeLists.txt  main.cpp
02-subdirectories/: CMakeLists.txt
02-subdirectories/lumath/: CMakeLists.txt
02-subdirectories/lumath/src/: lumath.cpp
03-library/: CMakeLists.txt  main.cpp
03-library/include/: lumath.h
04-install-test/install_lumath/: CMakeLists.txt
04-install-test/test_lumath/: CMakeLists.txt  main.cpp
